[package]
name = "egui-sdl2-event"
authors = ["Valtteri Vallius"]
version = "0.4.0"
edition = "2021"
keywords = ["sdl2", "egui"]
categories = ["gui", "input"]
description = "Provides event handling for egui in SDL2 window applications."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kaphula/egui-sdl2-event"
homepage = "https://github.com/kaphula/egui-sdl2-event"


[dependencies]
sdl2 = { version= "0.37.0", features = ["raw-window-handle",  "bundled", "static-link"] }
egui = "0.28.1"
